# manage-github-tabs-buttons

./: .env.example  .gitignore  README.md  enable_github_tab.py  enable_github_tab_or_button.py  pyproject.toml
src/github_tabs/: cli.py
