[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-tabs"
version = "0.1.0"
description = "A CLI tool to enable GitHub repository tabs and buttons via API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
github-tabs = "github_tabs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
